# driftlens

./: .gitignore  CLAUDE.md  README.md  action.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/driftlens/: baseline.py  cli.py  github.py  scorer.py  storage.py
src/driftlens/metrics/: complexity.py  naming.py  structure.py  verbosity.py
tasks/: lessons.md  todo.md
tests/: test_baseline.py  test_ci.py  test_cli.py  test_complexity.py  test_github.py  test_naming.py  test_scorer.py  test_structure.py  test_verbosity.py
tests/fixtures/: bloated.py  clean.py
