[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftlens"
version = "0.1.0"
description = "Code quality drift monitor for AI-generated code"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "radon>=6.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.scripts]
driftlens = "driftlens.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
