[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftlens"
version = "0.1.0"
description = "Code quality drift monitor for AI-generated code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Supash Ramesha", email = "supashramesha@gmail.com" }]
keywords = ["code-quality", "ai", "drift", "static-analysis", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
dependencies = [
    "click>=8.0",
    "radon>=6.0",
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/Su760/driftlens"
Repository = "https://github.com/Su760/driftlens"
"Bug Tracker" = "https://github.com/Su760/driftlens/issues"

[project.scripts]
driftlens = "driftlens.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
